--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
     "express-live-reloading": "^1.0.1",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "requirejs": "^2.3.6"
   }
 }
