--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "crypto-js": "^4.1.1",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.3",
